# open-table-migrator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  pyproject.toml
.claude/agents/: data-lineage.md  open-table-migrator.md  parquet-to-iceberg-migrator.md
docs/: bugs-2026-04-11-learningsparkv2.md
docs/superpowers/plans/: 2026-04-11-parquet-to-iceberg-skill.md  2026-04-12-tree-sitter-detector.md  2026-05-07-data-lineage.md  2026-05-08-const-folding.md  2026-05-08-dry-run-flag.md  2026-05-08-dynamic-sql-loading.md  2026-05-08-partition-spec-extraction.md  2026-05-08-phased-runbook.md  2026-05-08-uri-normalization.md
docs/superpowers/specs/: 2026-04-12-tree-sitter-detector-design.md  2026-05-07-data-lineage-design.md  2026-05-08-const-folding-design.md  2026-05-08-dry-run-flag-design.md  2026-05-08-dynamic-sql-loading-design.md  2026-05-08-partition-spec-extraction-design.md  2026-05-08-phased-runbook-design.md  2026-05-08-uri-normalization-design.md
skills/data_lineage/: SKILL.md  cli.py  filters.py  model.py  ts_parser.py
skills/data_lineage/extractors/: dto.py  jdbc_template.py  jooq.py  kafka.py  rest.py  spring_data.py
skills/data_lineage/passes/: graph_build.py  java_dfa.py  project_scan.py  sql_extract.py  sql_parse.py  sql_unit.py
skills/data_lineage/renderers/: json.py  mermaid.py  text.py
skills/open_table_migrator/: ICEBERG_WF_GUIDE.md  README.md  S2T_GUIDE.md  SKILL.md  __init__.py  analyzer.py  cli.py  deps.py  detector.py  dynamic_sql.py  examples.md  prepass.py  pyproject.toml  reference.md  runbook.py  scope.py  sql_registry.py  targets.py  ts_detector.py  uri.py  worklist.py
skills/open_table_migrator/scripts/: __init__.py  deps.py  detector.py  extract.py  filters.py  prepass.py  targets.py  ts_parser.py  worklist.py
skills/open_table_migrator/transformers/: jvm.py  pyspark.py
skills/parquet_to_iceberg/: SKILL.md  analyzer.py  cli.py  deps.py  detector.py  extract.py  folding.py  sql_registry.py  targets.py
skills/parquet_to_iceberg/transformers/: jvm.py  pandas.py  pyarrow.py  pyspark.py
tests/: conftest.py  test_analyzer.py  test_bug_regressions.py  test_cli.py  test_deps.py  test_detector.py  test_detector_extended.py  test_dynamic_sql.py  test_filters.py  test_hybrid_mode.py  test_integration.py  test_multi_table.py  test_partition_spec.py  test_prepass.py  test_runbook.py  test_scope.py  test_sql_registry.py  test_transformer_jvm.py  test_transformer_pandas.py  test_transformer_pyarrow.py  test_transformer_pyspark.py  test_transformers_extended.py  test_ts_parser.py  test_ts_queries.py  test_uri.py  test_worklist.py
tests/data_lineage/: test_filters.py  test_integration.py  test_model.py  test_ts_parser.py
tests/data_lineage/test_extractors/: test_dto.py  test_jdbc_template.py  test_jooq.py  test_kafka.py  test_rest.py  test_spring_data.py
tests/data_lineage/test_passes/: test_graph_build.py  test_java_dfa.py  test_project_scan.py  test_smoke.py  test_sql_extract.py  test_sql_parse.py
tests/data_lineage/test_renderers/: test_json.py  test_mermaid.py  test_text.py
tests/fixtures/java-hive/: pom.xml
tests/fixtures/java-hive/src/main/java/com/example/: HiveEtl.java
tests/fixtures/java-spark/: pom.xml
tests/fixtures/java-spark/src/main/java/com/example/: EventsJob.java
tests/fixtures/python-pandas/src/: etl.py
tests/fixtures/python-pandas/tests/: test_etl.py
tests/fixtures/python-pyarrow/src/: store.py
tests/fixtures/python-pyspark/src/: jobs.py
tests/fixtures/scala-spark/: build.gradle
tests/fixtures/scala-spark/src/main/scala/com/example/: EventsJob.scala
(+7 files in other folders)
