[project]
name = "parquet-iceberg-skill"
version = "0.1.0"
description = "Claude Code skill: convert Parquet projects to Apache Iceberg"
requires-python = ">=3.11"
dependencies = [
  "pyiceberg[sql-sqlite]>=0.7.0",
  "pyarrow>=14.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
