[project]
name = "open-table-migrator"
version = "0.2.0"
description = "Claude Code skill + subagent: inventory all data I/O in Python/Java/Scala projects and migrate between open table formats (Parquet/ORC → Iceberg now, any-to-any planned)"
requires-python = ">=3.11"
dependencies = [
  "pyiceberg[sql-sqlite]>=0.7.0",
  "pyarrow>=14.0.0",
  "tree-sitter>=0.23",
  "tree-sitter-python>=0.23",
  "tree-sitter-java>=0.23",
  "tree-sitter-scala>=0.23",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
